--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: none
-  datasource:
-    url: jdbc:h2:mem:test
+      ddl-auto: validate
+  liquibase:
+    change-log: classpath:db/changelog/master.xml
