--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   jpa:
+  profiles:
     hibernate:
       ddl-auto: validate
+    default: prod
   liquibase:
     change-log: classpath:db/changelog/master.xml
