--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,5 +4,5 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
-  liquibase:
-    change-log: classpath:db/changelog/master.xml
+#  liquibase:
+#    change-log: classpath:db/changelog/master.xml
