--- a/src/main/resources/application-deploy.yml
+++ b/src/main/resources/application-deploy.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: mysql://b74247ff886908:8bede543@eu-cdbr-west-03.cleardb.net
+    url: jdbc:mysql://b74247ff886908:8bede543@eu-cdbr-west-03.cleardb.net
     username: b74247ff886908
     password: 8bede543
 
