--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
-  profiles:
-    default: deploy
+  datasource:
+    url: jdbc:mysql://b74247ff886908:8bede543@eu-cdbr-west-03.cleardb.net
+    username: b74247ff886908
+    password: 8bede543
   jpa:
     hibernate:
       ddl-auto: validate
