--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,5 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
-#  liquibase:
-#    change-log: classpath:db/changelog/master.xml
+  liquibase:
+    change-log: classpath:db/changelog/master.xml
