--- a/system.properties
+++ b/system.properties
@@ -1,1 +1,4 @@
 java.runtime.version=19
+spring.datasource.url=jdbc:mysql://b74247ff886908:8bede543@eu-cdbr-west-03.cleardb.net
+spring.datasource.username=b74247ff886908
+spring.datasource.password=8bede543
