--- a/src/main/resources/application-deploy.yml
+++ b/src/main/resources/application-deploy.yml
@@ -1,6 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://b74247ff886908:8bede543@eu-cdbr-west-03.cleardb.net
+    url: jdbc:mysql://b74247ff886908:8bede543@eu-cdbr-west-03.cleardb.net/heroku_626a98db6bdf74a
     username: b74247ff886908
     password: 8bede543
-
+  liquibase:
+    contexts: deploy
+    change-log: classpath:db/changelog/master.xml
