--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 spring:
-  datasource:
-    url: jdbc:mysql://b74247ff886908:8bede543@eu-cdbr-west-03.cleardb.net
-    username: b74247ff886908
-    password: 8bede543
+  profiles:
+    default: deploy
   jpa:
     hibernate:
       ddl-auto: validate
