--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
-  autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.h2.H2ConsoleAutoConfiguration
+#  autoconfigure:
+#    exclude: org.springframework.boot.autoconfigure.h2.H2ConsoleAutoConfiguration
   profiles:
     default: deploy
   jpa:
